src/objects/ToDo__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ToDo_Status</valueSetName>
        </valueSet>
    </fields>
    <label>ToDo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ToDo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ToDos</pluralLabel>
    <recordTypes>
        <fullName>Personal</fullName>
        <active>true</active>
        <description>My personal Todo</description>
        <label>Personal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work</fullName>
        <active>true</active>
        <description>Work, business todo</description>
        <label>Work</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>